test/org/midica/testfiles/failing/eff-flow-double-for-single.midica
INCLUDE inc/instruments.midica


0: chorus.double.set(50)
